src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>netsuite_conn__Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Discount_Total__c</fullName>
        <label>Header Discount Total (NetSuite)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Document_Id__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Order_Date__c</fullName>
        <description>Date used to determine the date range in which this transaction appears on the Sales Order Register in NetSuite.</description>
        <label>NetSuite Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Order_Number__c</fullName>
        <label>NetSuite Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Order_Status__c</fullName>
        <label>NetSuite Order Status</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Sync_Err__c</fullName>
        <label>NetSuite Sync Error</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Native opportunity field is not exposed on API, so creating custom field to maintain the relationship between NetSuite Sales orders to Salesforce opportunity.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>NetSuite Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__PDF_File__c</fullName>
        <formula>IF( netsuite_conn__Document_Id__c == null , &apos;&apos;, HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; + netsuite_conn__Document_Id__c , netsuite_conn__NetSuite_Order_Number__c + &apos;.pdf&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NetSuite PDF File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Push_To_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push To NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Pushed_From_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed From NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Ship_Date__c</fullName>
        <description>Ship date for this transaction.</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Subtotal__c</fullName>
        <description>Order total before any discounts, shipping cost, handling cost or tax is added to the order.</description>
        <label>Sub-Total [NetSuite]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Sync_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Tax_Total__c</fullName>
        <label>Tax Total [NetSuite]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Total__c</fullName>
        <label>Total [NetSuite]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Tracking_Numbers__c</fullName>
        <description>Tracking information</description>
        <label>Tracking Number(s)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>